feat(swagger): add json body
